--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: #ccc;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+.app-wrapper {
   text-align: center;
+  width: 600px;
+  background-color: coral;
+  height: 70vh;
+  border-radius: 25px;
+  overflow-y: scroll;
+  padding: 25px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 45px;
+  color: white;
+  font-weight: 900;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  font-size: 25px;
+  border: none;
+  outline: none;
+  padding: 15px 25px;
+  color: rgb(27, 58, 100);
+  background-color: #ccc;
+  border-radius: 15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn-add {
+  width: 100px;
+  font-size: 25px;
+  padding: 10px;
+  border-radius: 15px;
+  border: none;
+  margin-left: 10%;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+.lists {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.todo-list {
+  margin-top: 20px;
+  width: 90%;
+  height: auto;
+  padding: 15px 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 25px;
+  background-color: black;
+  border-radius: 15px;
+}
+.list {
+  width: 50%;
+  font-size: 25px;
+  border-radius: 10px;
+}
+.change-btn {
+  background-color: yellowgreen;
+  font-weight: 900;
+  border-radius: 15px;
+  border: none;
+  padding: 15px 25px;
+  font-size: 15px;
+}
+.rem-btn {
+  background-color: aqua;
+  font-weight: 900;
+  border-radius: 15px;
+  border: none;
+  padding: 15px 25px;
+  font-size: 15px;
+  margin-left: 10px;
+}
+input:focus {
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
